--- a/.eslintignore
+++ b/.eslintignore
@@ -2,3 +2,5 @@ homeworks/week17/hw1/migrations/*
 homeworks/week17/hw1/models/*
 homeworks/week17/hw2/migrations/*
 homeworks/week17/hw2/models/*
+homeworks/week22/hw1/src/setupTests.js
+homeworks/week22/hw1/src/reportWebVitals.js
